added handlers and services for other features.
